@startuml BankManagementSystem_ClassDiagram
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam groupInheritance 2

title Sơ đồ lớp UML - Hệ thống Quản lý Ngân hàng

' ============================================
' 1. QUẢN LÝ TỔ CHỨC
' ============================================

package "Quản lý Tổ chức" #LightBlue {
    class Branches {
        +branch_id: INT <<PK>>
        +branch_code: VARCHAR(20) <<UNIQUE>>
        +branch_name: VARCHAR(200)
        +address: VARCHAR(500)
        +phone: VARCHAR(20)
        +email: VARCHAR(100)
        +manager_id: INT <<FK>>
        +status: ENUM
        +created_at: TIMESTAMP
    }

    class Roles {
        +role_id: INT <<PK>>
        +role_name: VARCHAR(50) <<UNIQUE>>
        +description: VARCHAR(500)
        +created_at: TIMESTAMP
    }

    class Employees {
        +employee_id: INT <<PK>>
        +employee_code: VARCHAR(20) <<UNIQUE>>
        +branch_id: INT <<FK>>
        +role_id: INT <<FK>>
        +full_name: VARCHAR(200)
        +email: VARCHAR(100) <<UNIQUE>>
        +phone: VARCHAR(20)
        +username: VARCHAR(50) <<UNIQUE>>
        +password_hash: VARCHAR(255)
        +status: ENUM
        +created_at: TIMESTAMP
    }
}

' ============================================
' 2. QUẢN LÝ KHÁCH HÀNG
' ============================================

package "Quản lý Khách hàng" #LightGreen {
    class Customers {
        +customer_id: INT <<PK>>
        +customer_code: VARCHAR(20) <<UNIQUE>>
        +full_name: VARCHAR(200)
        +email: VARCHAR(100) <<UNIQUE>>
        +phone: VARCHAR(20) <<UNIQUE>>
        +id_card_number: VARCHAR(20)
        +date_of_birth: DATE
        +gender: ENUM
        +address: VARCHAR(500)
        +occupation: VARCHAR(100)
        +monthly_income: DECIMAL(18,2)
        +registered_branch_id: INT <<FK>>
        +username: VARCHAR(50) <<UNIQUE>>
        +password_hash: VARCHAR(255)
        +status: ENUM
        +created_at: TIMESTAMP
    }

    class CreditScores {
        +score_id: INT <<PK>>
        +customer_id: INT <<FK>> <<UNIQUE>>
        +score: INT
        +grade: ENUM
        +interest_rate: DECIMAL(5,2)
        +max_ltv: DECIMAL(5,2)
        +on_time_payment_rate: INT
        +debt_to_income_ratio: DECIMAL(5,2)
        +account_age_months: INT
        +total_outstanding_debt: DECIMAL(18,2)
        +late_payments: INT
        +monthly_income: DECIMAL(18,2)
        +last_updated: TIMESTAMP
    }

    class CreditScoreHistory {
        +history_id: INT <<PK>>
        +customer_id: INT <<FK>>
        +old_score: INT
        +new_score: INT
        +score_change: INT
        +old_grade: VARCHAR(10)
        +new_grade: VARCHAR(10)
        +reason: VARCHAR(500)
        +event_type: ENUM
        +event_reference: VARCHAR(100)
        +created_by: INT <<FK>>
        +created_at: TIMESTAMP
    }
}

' ============================================
' 3. QUẢN LÝ TÀI KHOẢN
' ============================================

package "Quản lý Tài khoản" #LightYellow {
    class AccountTypes {
        +account_type_id: INT <<PK>>
        +type_code: VARCHAR(20) <<UNIQUE>>
        +type_name: VARCHAR(100)
        +description: VARCHAR(500)
        +min_balance: DECIMAL(18,2)
        +interest_rate: DECIMAL(5,2)
        +status: ENUM
    }

    class Accounts {
        +account_id: INT <<PK>>
        +account_number: VARCHAR(20) <<UNIQUE>>
        +customer_id: INT <<FK>>
        +account_type_id: INT <<FK>>
        +branch_id: INT <<FK>>
        +balance: DECIMAL(18,2)
        +interest_rate: DECIMAL(5,2)
        +opened_date: DATE
        +status: ENUM
        +created_at: TIMESTAMP
    }

    class Cards {
        +card_id: INT <<PK>>
        +card_number: VARCHAR(255) <<UNIQUE>>
        +account_id: INT <<FK>>
        +card_type: ENUM
        +issue_date: DATE
        +expiry_date: DATE
        +status: ENUM
        +created_at: TIMESTAMP
    }
}

' ============================================
' 4. GIAO DỊCH
' ============================================

package "Giao dịch" #LightCoral {
    class TransactionTypes {
        +transaction_type_id: INT <<PK>>
        +type_code: VARCHAR(20) <<UNIQUE>>
        +type_name: VARCHAR(100)
        +description: VARCHAR(500)
    }

    class Transactions {
        +transaction_id: BIGINT <<PK>>
        +transaction_code: VARCHAR(50) <<UNIQUE>>
        +transaction_type_id: INT <<FK>>
        +from_account_id: INT <<FK>>
        +to_account_id: INT <<FK>>
        +from_bank_name: VARCHAR(200)
        +to_bank_name: VARCHAR(200)
        +amount: DECIMAL(18,2)
        +fee: DECIMAL(10,2)
        +description: VARCHAR(500)
        +balance_after: DECIMAL(18,2)
        +status: ENUM
        +transaction_date: TIMESTAMP
    }
}

' ============================================
' 5. TIẾT KIỆM
' ============================================

package "Tiết kiệm" #Lavender {
    class SavingsInterestRates {
        +rate_id: INT <<PK>>
        +term_months: INT
        +min_amount: DECIMAL(18,2)
        +max_amount: DECIMAL(18,2)
        +interest_rate: DECIMAL(5,2)
        +status: ENUM
        +effective_from: DATE
        +effective_to: DATE
    }

    class SavingsDeposits {
        +deposit_id: INT <<PK>>
        +deposit_number: VARCHAR(20) <<UNIQUE>>
        +customer_id: INT <<FK>>
        +account_id: INT <<FK>>
        +branch_id: INT <<FK>>
        +principal_amount: DECIMAL(18,2)
        +interest_rate_id: INT <<FK>>
        +interest_rate: DECIMAL(5,2)
        +term_months: INT
        +start_date: DATE
        +maturity_date: DATE
        +auto_renew: ENUM
        +total_interest_earned: DECIMAL(18,2)
        +status: ENUM
        +created_at: TIMESTAMP
    }

    class SavingsTransactions {
        +savings_transaction_id: INT <<PK>>
        +deposit_id: INT <<FK>>
        +transaction_type: ENUM
        +amount: DECIMAL(18,2)
        +interest_amount: DECIMAL(18,2)
        +description: VARCHAR(500)
        +transaction_date: TIMESTAMP
    }
}

' ============================================
' 6. VAY VỐN
' ============================================

package "Vay vốn" #LightSalmon {
    class CollateralTypes {
        +collateral_type_id: INT <<PK>>
        +type_code: VARCHAR(20) <<UNIQUE>>
        +type_name: VARCHAR(100)
        +max_ltv: DECIMAL(5,2)
    }

    class Collaterals {
        +collateral_id: INT <<PK>>
        +customer_id: INT <<FK>>
        +collateral_type_id: INT <<FK>>
        +collateral_name: VARCHAR(200)
        +description: TEXT
        +location: VARCHAR(500)
        +certificate_number: VARCHAR(100)
        +issue_date: DATE
        +issue_authority: VARCHAR(200)
        +original_value: DECIMAL(18,2)
        +appraised_value: DECIMAL(18,2)
        +appraised_by: INT <<FK>>
        +appraised_date: DATE
        +status: ENUM
        +verification_notes: VARCHAR(1000)
        +created_at: TIMESTAMP
    }

    class LoanTypes {
        +loan_type_id: INT <<PK>>
        +type_code: VARCHAR(20) <<UNIQUE>>
        +type_name: VARCHAR(100)
        +description: VARCHAR(500)
        +max_amount: DECIMAL(18,2)
        +max_term_months: INT
        +require_collateral: ENUM
    }

    class LoanInterestRates {
        +rate_id: INT <<PK>>
        +loan_type_id: INT <<FK>>
        +min_amount: DECIMAL(18,2)
        +max_amount: DECIMAL(18,2)
        +term_months_from: INT
        +term_months_to: INT
        +credit_grade: ENUM
        +base_rate: DECIMAL(5,2)
        +effective_from: DATE
        +effective_to: DATE
        +status: ENUM
    }

    class Loans {
        +loan_id: INT <<PK>>
        +loan_number: VARCHAR(20) <<UNIQUE>>
        +customer_id: INT <<FK>>
        +account_id: INT <<FK>>
        +loan_type_id: INT <<FK>>
        +branch_id: INT <<FK>>
        +loan_officer_id: INT <<FK>>
        +loan_amount: DECIMAL(18,2)
        +approved_amount: DECIMAL(18,2)
        +interest_rate_id: INT <<FK>>
        +interest_rate: DECIMAL(5,2)
        +term_months: INT
        +monthly_payment: DECIMAL(18,2)
        +purpose: VARCHAR(500)
        +collateral_id: INT <<FK>>
        +collateral_value: DECIMAL(18,2)
        +ltv_ratio: DECIMAL(5,2)
        +outstanding_balance: DECIMAL(18,2)
        +application_date: DATE
        +approved_date: DATE
        +approved_by: INT <<FK>>
        +rejection_reason: VARCHAR(500)
        +disbursement_date: DATE
        +first_payment_date: DATE
        +maturity_date: DATE
        +status: ENUM
        +created_at: TIMESTAMP
    }

    class LoanPaymentSchedule {
        +schedule_id: INT <<PK>>
        +loan_id: INT <<FK>>
        +payment_number: INT
        +due_date: DATE
        +principal_amount: DECIMAL(18,2)
        +interest_amount: DECIMAL(18,2)
        +total_payment: DECIMAL(18,2)
        +outstanding_balance: DECIMAL(18,2)
        +status: ENUM
        +paid_amount: DECIMAL(18,2)
        +paid_date: DATE
    }

    class LoanPayments {
        +payment_id: INT <<PK>>
        +loan_id: INT <<FK>>
        +schedule_id: INT <<FK>>
        +transaction_id: BIGINT <<FK>>
        +payment_date: TIMESTAMP
        +principal_paid: DECIMAL(18,2)
        +interest_paid: DECIMAL(18,2)
        +late_fee_paid: DECIMAL(10,2)
        +total_paid: DECIMAL(18,2)
        +payment_method: ENUM
        +reference_number: VARCHAR(100)
        +notes: VARCHAR(500)
    }
}

' ============================================
' RELATIONSHIPS
' ============================================

' Branches - Employees
Branches "1" -- "0..*" Employees : manages
Branches "1" -- "1" Employees : manager_id
Employees "0..*" -- "1" Roles : has

' Customers - Branches
Customers "0..*" -- "1" Branches : registered_at

' Customers - Credit
Customers "1" -- "0..1" CreditScores : has
Customers "1" -- "0..*" CreditScoreHistory : has
CreditScoreHistory "0..*" -- "0..1" Employees : created_by

' Accounts
Customers "1" -- "0..*" Accounts : owns
Accounts "0..*" -- "1" AccountTypes : type
Accounts "0..*" -- "1" Branches : managed_by
Accounts "1" -- "0..*" Cards : has

' Transactions
Transactions "0..*" -- "1" TransactionTypes : type
Transactions "0..*" -- "0..1" Accounts : from
Transactions "0..*" -- "0..1" Accounts : to

' Savings
SavingsDeposits "0..*" -- "1" Customers : belongs_to
SavingsDeposits "0..*" -- "1" Accounts : linked_to
SavingsDeposits "0..*" -- "1" Branches : managed_by
SavingsDeposits "0..*" -- "1" SavingsInterestRates : uses
SavingsDeposits "1" -- "0..*" SavingsTransactions : has

' Collaterals
Collaterals "0..*" -- "1" Customers : owned_by
Collaterals "0..*" -- "1" CollateralTypes : type
Collaterals "0..*" -- "0..1" Employees : appraised_by

' Loans
Loans "0..*" -- "1" Customers : borrowed_by
Loans "0..*" -- "1" Accounts : disbursed_to
Loans "0..*" -- "1" LoanTypes : type
Loans "0..*" -- "1" Branches : managed_by
Loans "0..*" -- "1" Employees : handled_by
Loans "0..*" -- "0..1" LoanInterestRates : uses
Loans "0..*" -- "0..1" Collaterals : secured_by
Loans "0..*" -- "0..1" Employees : approved_by
Loans "1" -- "0..*" LoanPaymentSchedule : has
Loans "1" -- "0..*" LoanPayments : has
LoanInterestRates "0..*" -- "1" LoanTypes : applies_to
LoanPaymentSchedule "0..1" -- "0..*" LoanPayments : referenced_by
LoanPayments "0..*" -- "0..1" Transactions : linked_to

@enduml

